added neptune logging code

--- a/Torch_Image_Classification_Training.ipynb
+++ b/Torch_Image_Classification_Training.ipynb
@@ -1,20 +1,4 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "name": "Torch Image Classification Training.ipynb",
-      "provenance": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    },
-    "accelerator": "GPU"
-  },
   "cells": [
     {
       "cell_type": "code",
@@ -45,43 +29,74 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "nuBRbMnRYSV2"
+      },
+      "outputs": [],
       "source": [
         "!pip install albumentations==0.4.6 -q\n",
         "import albumentations as A\n",
         "from albumentations.pytorch import ToTensorV2"
-      ],
-      "metadata": {
-        "id": "nuBRbMnRYSV2"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
       "source": [
-        "from google.colab import drive\n",
-        "drive.mount('/content/drive')"
-      ],
+        "! pip install neptune-client -q\n",
+        "from neptune.new.types import File\n",
+        "import neptune.new as neptune"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "q-eKt77WYhYF"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive')"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "#cd to Dataset dir, structure as in readme\n",
-        "%cd drive/MyDrive/Dataset"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "zoF6191Y4Sn4"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "#cd to Dataset dir, structure as in readme\n",
+        "%cd drive/MyDrive/Dataset"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "NEPTUNE_PROJ_NAME = \"username/exampleprojname\"\n",
+        "API_TOKEN = \"abc123==\"\n",
+        "\n",
+        "run = neptune.init(\n",
+        "    project=NEPTUNE_PROJ_NAME,\n",
+        "    api_token=API_TOKEN,\n",
+        ")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "fL02VwBNaLER"
+      },
+      "outputs": [],
       "source": [
         "#try out different augmentations here, list of options at https://github.com/albumentations-team/albumentations\n",
         "\n",
@@ -112,28 +127,28 @@
         "        ToTensorV2(),\n",
         "    ]\n",
         ")"
-      ],
-      "metadata": {
-        "id": "fL02VwBNaLER"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "VnCiMxEB-43x"
+      },
+      "outputs": [],
       "source": [
         "#change this to the number of classes in your dataset\n",
         "\n",
         "NUM_OF_CLASSES = 3"
-      ],
-      "metadata": {
-        "id": "VnCiMxEB-43x"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "qLVr2zRN4j0p"
+      },
+      "outputs": [],
       "source": [
         "train_data_path = 'train'\n",
         "valid_data_path = 'valid'\n",
@@ -150,29 +165,29 @@
         "print('test_image_path example: ', test_image_paths[0])\n",
         "print('class example: ', classes[0])\n",
         "print(\"Train size: {}\\nValid size: {}\\nTest size: {}\".format(len(train_image_paths), len(valid_image_paths), len(test_image_paths)))"
-      ],
-      "metadata": {
-        "id": "qLVr2zRN4j0p"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "1HhLmEwz5BjE"
+      },
+      "outputs": [],
       "source": [
         "idx_to_class = {i:j for i, j in enumerate(classes)}\n",
         "class_to_idx = {value:key for key,value in idx_to_class.items()}\n",
         "\n",
         "print(f'Class to index mapping: {class_to_idx}')"
-      ],
-      "metadata": {
-        "id": "1HhLmEwz5BjE"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "DgIVn45O5IHN"
+      },
+      "outputs": [],
       "source": [
         "#your custom dataset class def\n",
         "\n",
@@ -197,40 +212,40 @@
         "            image = self.transform(image=image)['image']\n",
         "            \n",
         "        return image, label"
-      ],
-      "metadata": {
-        "id": "DgIVn45O5IHN"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "qv1uyXna5Tq_"
+      },
+      "outputs": [],
       "source": [
         "train_dataset = CustomDataset(train_image_paths,train_transforms)\n",
         "valid_dataset = CustomDataset(valid_image_paths,train_transforms)\n",
         "test_dataset = CustomDataset(test_image_paths,test_transforms)"
-      ],
-      "metadata": {
-        "id": "qv1uyXna5Tq_"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "print('The shape of tensor for 50th image in train dataset: ',train_dataset[49][0].shape)\n",
-        "print('The label for 50th image in train dataset: ',train_dataset[49][1])"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "FYfTYbBO5WYJ"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "print('The shape of tensor for 50th image in train dataset: ',train_dataset[49][0].shape)\n",
+        "print('The label for 50th image in train dataset: ',train_dataset[49][1])"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "9zfV4OhJ5lfo"
+      },
+      "outputs": [],
       "source": [
         "def visualize_augmentations(dataset, idx=0, samples=10, cols=5, random_img=False):\n",
         "    \n",
@@ -249,54 +264,54 @@
         "        \n",
         "    plt.tight_layout(pad=1)\n",
         "    plt.show()"
-      ],
-      "metadata": {
-        "id": "9zfV4OhJ5lfo"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "visualize_augmentations(train_dataset, np.random.randint(1, len(train_image_paths)), random_img=True)"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "DTFur3Wm5m5Z"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "visualize_augmentations(train_dataset, np.random.randint(1, len(train_image_paths)), random_img=True)"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "vGrpfo5N5oFd"
+      },
+      "outputs": [],
       "source": [
         "train_loader = DataLoader(train_dataset, batch_size=32, shuffle=True)\n",
         "valid_loader = DataLoader(valid_dataset, batch_size=32, shuffle=True)\n",
         "test_loader = DataLoader(test_dataset, batch_size=32, shuffle=False)\n",
         "\n",
         "device = torch.device(\"cuda:0\" if torch.cuda.is_available() else \"cpu\")"
-      ],
-      "metadata": {
-        "id": "vGrpfo5N5oFd"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "EbL3RpxC5zms"
+      },
+      "outputs": [],
       "source": [
         "image_datasets = {'train': train_dataset, 'valid': valid_dataset, 'test': test_dataset}\n",
         "dataloaders = {'train': train_loader, 'valid': valid_loader, 'test': test_loader}\n",
         "dataset_sizes = {'train': len(train_dataset), 'valid': len(valid_dataset), 'test': len(test_dataset)}"
-      ],
-      "metadata": {
-        "id": "EbL3RpxC5zms"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "EZ_h-x926B_f"
+      },
+      "outputs": [],
       "source": [
         "def train_model(model, criterion, optimizer, scheduler, num_epochs=12):\n",
         "\n",
@@ -340,6 +355,15 @@
         "            epoch_loss = running_loss / dataset_sizes[phase]\n",
         "            epoch_acc = running_corrects.double() / dataset_sizes[phase]\n",
         "\n",
+        "            #log training and val data on neptune\n",
+        "            if phase == 'train':\n",
+        "              run[\"training/batch/loss\"].log(epoch_loss)\n",
+        "              run[\"training/batch/acc\"].log(epoch_acc)\n",
+        "\n",
+        "            else:\n",
+        "              run[\"valid/batch/loss\"].log(epoch_loss)\n",
+        "              run[\"valid/batch/acc\"].log(epoch_acc)\n",
+        "\n",
         "            print(f'{phase} Loss: {epoch_loss:.4f} Acc: {epoch_acc:.4f}')\n",
         "\n",
         "            if phase == 'valid' and epoch_acc > best_acc:\n",
@@ -352,15 +376,15 @@
         "\n",
         "    model.load_state_dict(best_model_wts)\n",
         "    return model"
-      ],
-      "metadata": {
-        "id": "EZ_h-x926B_f"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "uLMF0bWn6GUN"
+      },
+      "outputs": [],
       "source": [
         "def visualize_model(model, num_images=6):\n",
         "    was_training = model.training\n",
@@ -387,83 +411,178 @@
         "                    model.train(mode=was_training)\n",
         "                    return\n",
         "        model.train(mode=was_training)"
-      ],
-      "metadata": {
-        "id": "uLMF0bWn6GUN"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
       "source": [
-        "#load a pretrained model, replace with a final layer\n",
         "#change training parameters here if needed\n",
+        "parameters = {\n",
+        "    \"lr\": 0.001,\n",
+        "    \"batch_size\": 16,\n",
+        "    \"input_size\": 3 * 256 * 256,\n",
+        "    \"n_classes\": NUM_OF_CLASSES,\n",
+        "    \"momentum\": 0.9,\n",
+        "    \"model_filename\": \"basemodel\",\n",
+        "    \"device\": device,\n",
+        "}\n",
         "\n",
+        "#load a pretrained model, replace with a new final layer\n",
         "model_ft = models.resnet18(pretrained=True)\n",
         "num_ftrs = model_ft.fc.in_features\n",
         "model_ft.fc = nn.Linear(num_ftrs, NUM_OF_CLASSES)\n",
         "model_ft = model_ft.to(device)\n",
         "criterion = nn.CrossEntropyLoss()\n",
-        "optimizer_ft = optim.SGD(model_ft.parameters(), lr=0.001, momentum=0.9)\n",
-        "exp_lr_scheduler = lr_scheduler.StepLR(optimizer_ft, step_size=7, gamma=0.1)"
-      ],
-      "metadata": {
-        "id": "RC92jGSe6Vwu"
-      },
-      "execution_count": null,
-      "outputs": []
+        "optimizer_ft = optim.SGD(model_ft.parameters(), lr=parameters[\"lr\"], momentum=parameters[\"momentum\"])\n",
+        "exp_lr_scheduler = lr_scheduler.StepLR(optimizer_ft, step_size=7, gamma=0.1)\n",
+        "\n",
+        "#log all parameters on neptune\n",
+        "run[\"config/hyperparameters\"] = parameters\n",
+        "run[\"config/model\"] = type(model_ft).__name__\n",
+        "run[\"config/criterion\"] = type(criterion).__name__\n",
+        "run[\"config/optimizer\"] = type(optimizer_ft).__name__\n",
+        "run[\"config/dataset/path\"] = \".\"\n",
+        "run[\"config/dataset/transforms\"] = train_transforms\n",
+        "run[\"config/dataset/size\"] = len(train_image_paths) + len(valid_image_paths) + len(test_image_paths)"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "model_ft = train_model(model_ft, criterion, optimizer_ft, exp_lr_scheduler,\n",
-        "                       num_epochs=50)"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "HjPTjqLX6bxG"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "model_ft = train_model(model_ft, criterion, optimizer_ft, exp_lr_scheduler,\n",
+        "                       num_epochs=50)"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "model_name = 'model_trained.pth'\n",
-        "torch.save(model_ft.state_dict(), model_name)"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "6ZtEaf9K_u-s"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "fname = parameters[\"model_filename\"]\n",
+        "torch.save(model_ft.state_dict(), f\"./{fname}.pth\")"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
       "source": [
-        "#loading the saved model\n",
+        "#log model architecture to neptune\n",
+        "fname = parameters[\"model_filename\"]\n",
+        "\n",
+        "with open(f\"./{fname}_arch.txt\", \"w\") as f:\n",
+        "    f.write(str(model_ft))\n",
+        "\n",
+        "run[f\"io_files/artifacts/{parameters['model_filename']}_arch\"].upload(\n",
+        "    f\"./{parameters['model_filename']}_arch.txt\"\n",
+        ")\n",
+        "run[f\"io_files/artifacts/{parameters['model_filename']}\"].upload(\n",
+        "    f\"./{parameters['model_filename']}.pth\"\n",
+        ")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "#visualize preds on neptune\n",
+        "\n",
+        "dataiter = iter(test_loader)\n",
+        "images, labels = dataiter.next()\n",
+        "model_ft.eval()\n",
+        "\n",
+        "if torch.cuda.is_available():\n",
+        "    model_ft.to(\"cpu\")\n",
+        "\n",
+        "n_samples = 50\n",
+        "img = images[:n_samples]\n",
+        "probs = F.softmax(model_ft(img), dim=1)\n",
+        "probs = probs.data.numpy()\n",
+        "\n",
+        "for i, ps in enumerate(probs):\n",
+        "    pred = classes[np.argmax(ps)]\n",
+        "    gt = classes[labels[i]]\n",
+        "    description = \"\\n\".join(\n",
+        "        [\n",
+        "            \"class {}: {}%\".format(classes[n], round(p * 100, 2))\n",
+        "            for n, p in enumerate(ps)\n",
+        "        ]\n",
+        "    )\n",
+        "\n",
+        "    run[\"images/predictions\"].log(\n",
+        "        File.as_image(img[i].squeeze().permute(2, 1, 0).clip(0, 1)),\n",
+        "        name=f\"{i}_{pred}_{gt}\",\n",
+        "        description=description,\n",
+        "    )"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "#IMPORTANT: stop the neptune runtime after logging is completed\n",
+        "\n",
+        "run.stop()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "9A1r4v_7P9Ak"
+      },
+      "outputs": [],
+      "source": [
+        "#loading the saved model for inference\n",
         "\n",
         "model_loaded = models.resnet18(pretrained=True)\n",
         "num_ftrs = model_loaded.fc.in_features\n",
         "model_loaded.fc = nn.Linear(num_ftrs, NUM_OF_CLASSES)\n",
-        "model_loaded.load_state_dict(torch.load(model_name, map_location='cpu'))"
-      ],
-      "metadata": {
-        "id": "9A1r4v_7P9Ak"
-      },
-      "execution_count": null,
-      "outputs": []
+        "model_loaded.load_state_dict(torch.load(f\"./{fname}.pth\", map_location='cpu'))"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "visualize_model(model_loaded)"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "f2bs7D2A_8ng"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "visualize_model(model_loaded)"
+      ]
     }
-  ]
+  ],
+  "metadata": {
+    "accelerator": "GPU",
+    "colab": {
+      "name": "Torch Image Classification Training.ipynb",
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
