fixed neptune import order

--- a/Torch_Image_Classification_Training.ipynb
+++ b/Torch_Image_Classification_Training.ipynb
@@ -47,8 +47,8 @@
       "outputs": [],
       "source": [
         "! pip install neptune-client -q\n",
-        "from neptune.new.types import File\n",
-        "import neptune.new as neptune"
+        "import neptune.new as neptune\n",
+        "from neptune.new.types import File"
       ]
     },
     {
